--- a/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
@@ -1,10 +1,10 @@
-COULD\ NOT\ REVERT\ VERSION=Impossibile ripristinare la versione, nessuna modifica effettuata
+COULD\ NOT\ REVERT\ VERSION=Impossibile ripristinare la versione
 
-INSERT\ MANUAL\ RESOURCE\ LOCATION=
+INSERT\ MANUAL\ RESOURCE\ LOCATION=Inserisci posizione risorsa manuale
 
 RE-IMPORT\ THIS\ BRANCH=Importa di nuovo questo ramo
 
-RE-IMPORT\ THIS\ SESSION=
+RE-IMPORT\ THIS\ SESSION=Importa di nuovo questa sessione
 
 IMPORT\ BRANCH=Importa ramo
 
@@ -40,7 +40,7 @@ ADD\ TO\ FAVOURITES\ LIST=Aggiungi alla lista dei preferiti
 
 ADD\ CHILDREN\ TO\ FAVOURITES\ LIST=Aggiungi figli alla lista dei preferiti
 
-ADD\ BULK\ RESOURCES\ VIA\ FAVOURITES=Aggiungi risorse in blocco dalla lista dei preferiti
+ADD\ BULK\ RESOURCES\ VIA\ FAVOURITES=Aggiungi risorse in blocco tramite lista dei preferiti
 
 ADD\ FROM\ FAVOURITES=Aggiungi dalla lista dei preferiti
 
@@ -70,7 +70,7 @@ EDIT\ ALL\ METADATA=Modifica tutti i metadati
 
 VIEW\ SELECTED=Visualizza nodo/i selezionato/i
 
-REMOVE\ SELECTED\ ROWS=Rimuovi righe selezionate
+REMOVE\ SELECTED\ ROWS=Rimuovi righe selezionate dalla tabella
 
 VIEW\ SELECTED\ ROWS=Visualizza righe selezionate
 
@@ -78,23 +78,23 @@ CLEAR\ CELL\ HIGHLIGHT=Cancella celle evidenziate
 
 HIGHLIGHT\ MATCHING\ CELLS=Evidenzia celle corrispondenti
 
-COPY\ CELL\ TO\ WHOLE\ COLUMN=Copia cella nell'intera colonna=
+COPY\ CELL\ TO\ WHOLE\ COLUMN=Copia cella nell'intera colonna
 
 CANNOT\ COPY\ THIS\ TYPE\ OF\ FIELD=Impossibile copiare questo tipo di campo
 
-REVERT\ SELECTED\ FIELDS=Ripristina i file selezionati
+REVERT\ SELECTED\ FIELDS=Ripristina campi selezionati
 
 DELETE\ FIELD=Elimina campo
 
 ERROR\ DELETING\ FIELDS=Errore durante l'eliminazione dei campi
 
-DELETE\ MULTIFIELD=Elimina campi=
+DELETE\ MULTIFIELD=Elimina campi
 
-SHOW\ CHILD\ NODES=Mostra nodi figlio=
+SHOW\ CHILD\ NODES=Mostra nodi figli
 
-HIDE\ SELECTED\ COLUMNS=Nascondi le colonne selezionate
+HIDE\ SELECTED\ COLUMNS=Nascondi colonne selezionate
 
-OPEN\ IN\ LONG\ FIELD\ EDITOR=Apri con editor di testo lungo=
+OPEN\ IN\ LONG\ FIELD\ EDITOR=Apri con editor di testo lungo
 
 DELETE\ {0}=Elimina {0}
 
@@ -110,7 +110,7 @@ NO\ UPDATES\ FOUND=Nessun aggiornamento trovato
 
 CHECK\ FOR\ UPDATES=Verifica aggiornamenti
 
-VIEW\ ERROR\ LOG=Visualizza registro errori
+VIEW\ ERROR\ LOG=Visualizza log degli errori
 
 ARBIL\ FORUM\ (WEBSITE)=Forum (sito Web)
 
@@ -134,7 +134,7 @@ RESET\ ALL\ WINDOWS\ TO\ DEFAULT\ SIZE\ AND\ LOCATION?=Reimpostare misura e post
 
 RESET\ WINDOW\ LOCATIONS=Reimposta postazione finestre
 
-WINDOW=Window
+WINDOW=Finestra
 
 PLUGINLIST\ NOT\ FOUND=Elenco dei plugin non trovato
 
@@ -146,13 +146,13 @@ EDIT\ COLUMN\ VIEWS=Modifica visualizzazione colonne
 
 COLUMN\ VIEW\ FOR\ NEW\ TABLES=Visualizzazione a colonne per nuove tabelle
 
-SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostra lingua insieme al nome della colonna
+SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostra lingua nel nome della colonna
 
 TRACK\ TABLE\ SELECTION\ IN\ TREE=Segui selezione tabella su albero
 
-THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Questa opzione controlla che tutti i file di metadati locali siano compatibili con il formato XML ogni volta che vengono caricati. Se il file di metadati non viene convalidato secondo lo schema, viene evidenziato di rosso sull'albero.
+THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Questa opzione controlla che tutti i file di metadati locali siano compatibili con il formato XML ogni volta che vengono caricati. Se il file di metadati non viene convalidato secondo lo schema, sar\u00e0 evidenziato di rosso sull'albero.
 
-ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Controlla sempre conpatibilit\u00e0 dei file di metadati locali con il formato XML 
+ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Controlla sempre compatibilit\u00e0 dei file di metadati locali con il formato XML 
 
 THE\ SETTING\ CHANGE\ WILL\ BE\ EFFECTIVE\ WHEN\ ARBIL\ IS\ RESTARTED.=Le modifiche alle impostazioni verranno eseguite dopo il riavvio di Arbil
 
@@ -164,13 +164,13 @@ WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ 
 
 COPY\ NEW\ RESOURCES\ INTO\ CACHE=Copia nuove risorse nella cache 
 
-CHECK\ FOR\ NEW\ VERSION\ ON\ START=
+CHECK\ FOR\ NEW\ VERSION\ ON\ START=Verifica nuove versioni durante l'esecuzione dell'applicazione
 
 SHOW\ STATUS\ BAR=Mostra barra di stato
 
 SHOW\ SELECTION\ PREVIEW=Mostra anteprima selezione
 
-SAVE\ WINDOWS\ ON\ EXIT=
+SAVE\ WINDOWS\ ON\ EXIT=Salva finestre prima di uscire
 
 RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Scarica di nuovo vocabolari correnti
 
@@ -220,11 +220,11 @@ SAVE\ CHANGES=Salva modifiche
 
 FILE=File
 
-PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore del parser durante la lettura del sistema di Guida! Vedi registro errori per ulteriori dettagli. 
+PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore del parser durante la lettura del sistema di Guida! Vedi log degli errori per ulteriori dettagli.
 
 ERROR=Errore
 
-I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=I/O errore durante la lettura del sistema di Guida! Vedi registro errori per ulteriori dettagli.
+I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore I/O durante la lettura del sistema di Guida! Vedi registro errori per ulteriori dettagli.
 
 ARBILMENUBAR\ REQUIRES\ ARBILWINDOWMANAGER.\ FOUND\ {0}=
 
@@ -232,7 +232,7 @@ ARBILMENUBAR\ REQUIRES\ ARBILTREEHELPER.\ FOUND\ {0}=
 
 EXPORT\ FAILED=Esportazione non riuscita
 
-EXPORT\ TO\ HTML\ FAILED.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Esportazione in HTML non riuscita. Vedi registro errori per ulteriori dettagli. 
+EXPORT\ TO\ HTML\ FAILED.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Esportazione in HTML non riuscita. Vedi log degli errori per ulteriori dettagli. 
 
 EXPORT\ IMDI\ TO\ HTML=Esporta IMDI in HTML
 
@@ -240,7 +240,7 @@ OPEN\ IMDI\ FORMATTED=Apri IMDI formattato
 
 VIEW\ IMDI\ FORMATTED=Visualizza IMDI formattato
 
-VIEW\ XML=Visualizza formato XML
+VIEW\ XML=Visualizza in XML
 
 OPEN\ IN\ EXTERNAL\ APPLICATION=Apri con applicazione esterna
 
@@ -251,11 +251,11 @@ SAVE\ CHANGES\ TO\ DISK=Salva modifiche su disco
 SELECT\ RESOURCE\ FILE=Seleziona file di risorse
 
 BROWSE\ FOR\ RESOURCE\ FILE=Sfoglia file di risorse
-ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)=L'applicazione sostituir\u00e0 tutti i valori della colonna "{0}"\ncon il valore "{1}"\n(i <valori multipli> non subiranno modifiche)
+ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)=L''applicazione sostituir\u00e0 tutti i valori della colonna "{0}"\ncon il valore "{1}"\n(i <valori multipli> non subiranno modifiche)
 LOGOUT\ ERROR=Errore durante il logout
 IMPORT/EXPORT\ FAVOURITES=Importa/Esporta preferiti
 GROUP\ FAVOURITES\ BY\ TYPE=Raggruppa preferiti secondo tipologia
-EDIT\ THIS\ COLUMN\ VIEW=Modifica visualizzazione colonna
+EDIT\ THIS\ COLUMN\ VIEW=Modifica visualizzazione di questa colonna
 LIMIT\ VIEW\ TO\ CURRENT\ COLUMNS=Limita visualizzazione a colonne correnti 
 COLUMN\ VIEW\ FOR\ THIS\ TABLE=Visualizzazione a colonne per questa tabella
 COPY\ TABLE\ FOR\ WEBSITE=Copia tabella per sito web
@@ -265,11 +265,16 @@ THIS\ COLUMN=Questa colonna ({0})
 ALL\ COLUMNS=Tutte le colonne
 HIDE\ COLUMN=Nascondi colonna
 SAVE\ CURRENT\ COLUMN\ VIEW=Salva visualizzazione colonne corrente
-COULD\ NOT\ REVERT\ VERSION,\ NO\ CHANGES\ MADE=
-FORCE\ TYPE\ CHECKING=Forza verifica tipologia
+COULD\ NOT\ REVERT\ VERSION,\ NO\ CHANGES\ MADE=Impossibile ripristinare la versione, nessuna modifica effettuata
+FORCE\ TYPE\ CHECKING=Forza type checking
 MAKE\ COLUMN\ FIT\ CONTENTS=Adatta colonna al contenuto
 MAKE\ ALL\ COLUMNS\ FIT\ CONTENTS=Adatta tutte le colonne al contenuto
 MAKE\ ALL\ COLUMNS\ THE\ SIZE\ OF=Adatta tutte le colonne alla misura "{0}"
 NO\ UPDATES\ FOUND,\ CURRENT\ VERSION\ IS\ {0}=Nessun aggiornamento trovato, la versione attuale \u00e8 {0}
 DELETE\ ATTRIBUTE\ {0}\ X\ {1}=Elimina {1} attributo "{0}" 
 DELETE\ {0}\ X\ {1}=Elimina {1} campo "{0}"
+REMOVE\ SELECTED\ NODES\ FROM\ PARENT=Elimina i nodi selezionati dal nodo padre
+JUMP\ TO\ IN\ TREE=Passa a nell'albero
+SHOW\ CONTEXT=Mostra contesto
+SELECT\ MATCHING\ ROWS=Seleziona righe corrispondenti
+ERROR\ DELETING\ FIELDS,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante l'eliminazione dei campi, controlla il log degli errori nel menu Guida per ulteriori informazioni.
