--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -1,43 +1,45 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-CLARIN\ INSTANCE=Instance Clarin
-CATALOGUE=Catalogue
-SESSION=Session
-\ (LOADING)=\ (chargement)
-OTHER=Autres
-DELETE\ NODE=Supprimer Node
-ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Erreur suppression, consultez le fichier journal via le menu d\'aide pour plus d\'informations.
+CLARIN\ INSTANCE=Ejemplo de Clarin
+CATALOGUE=Cat\u00e1logo
+SESSION=Sesi\u00f3n
+\ (LOADING)=\ (cargando)
+OTHER=Otro
+DELETE\ NODE=Eliminar nodo
+ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Error en la eliminaci\u00f3n del nodo, ver registro de errores en el menu Gu\u00eda para m\u00e1s informaciones.
 FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossible de charger {0} emplacements. Consultez le journal des erreurs pour plus de d\u00e9tails.
-ERROR=Erreur
-COULD\ NOT\ FIND\ OR\ LOAD\ LOCATIONS.\ ADDING\ DEFAULT\ LOCATIONS.=Impossible de trouver ou de charger endroits. Ajout d\'emplacements par d\u00e9faut.
-FAVOURITES=Favoris
-WORKING\ DIRECTORIES=R\u00e9pertoires de Travail
-REMOTE\ CORPUS=Distance corpus
-LOCAL\ CORPUS=Local corpus
-WARNING=AVERTISSEMENT
-FILES=Fichiers
+ERROR=Error
+COULD\ NOT\ FIND\ OR\ LOAD\ LOCATIONS.\ ADDING\ DEFAULT\ LOCATIONS.=No se pudo encontrar o cargar ubicaciones. Se a\u00f1adir\u00e1n las ubicaciones predeterminadas.
+FAVOURITES=Favoritos
+WORKING\ DIRECTORIES=Directorios de trabajo
+REMOTE\ CORPUS=Corpus remoto
+LOCAL\ CORPUS=Corpus local
+WARNING=ADVERTENCIA
+FILES=Archivos
 THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?",\ "SAVE\ TO\ DISK?=Cette action permettra d\'\u00e9conomiser toutes les modifications en attente sur {0} disque. Continuer?
-REMEMBER\ MY\ CHOICE=Se souvenir de mon choix
-\ FORMATTED=\ format\u00e9
-VIEW\ IMDI\ XML=Voir IMDI XML
-THE\ NODE\ MUST\ BE\ SAVED\ FIRST.SAVE\ NOW?=Le noeud doit \u00eatre enregistr\u00e9 en premier.\nEnregistrer maintenant?
-FAILED\ TO\ OPEN\ THE\ REMOTE\ LOCATION\:\ {0}=Impossible d\'ouvrir l\'emplacement distant: {0}
-OPEN\ IN\ EXTERNAL\ APPLICATION=Ouvrir dans une application externe
-FAILED\ TO\ OPEN\ THE\ FILE.\ PLEASE\ CHECK\ THAT\ IT\ IS\ ACCESSIBLE\ AND\ HAS\ AN\ APPLICATION\ ASSOCIATED\ WITH\ IT.DO\ YOU\ WANT\ TO\ OPEN\ THE\ PARENT\ DIRECTORY?=Impossible d\'ouvrir le fichier. S\'il vous pla\u00eet v\u00e9rifiez qu\'il est accessible et dispose d\'une application qui lui est associ\u00e9e. \n\nVoulez-vous ouvrir le r\u00e9pertoire parent?
-FAILED\ TO\ FIND\ THE\ FILE\:\ {0}=Impossible de trouver le fichier: {0}
-SELECTION=S\u00e9lection
-DIRECTORIES=REPERTOIRES
-METADATA\ FILES=Fichiers de m\u00e9tadonn\u00e9es
-THE\ SELECTED\ EXPORT\ DIRECTORY\ IS\ NOT\ EMPTY.\ ON\ EXPORT,\ YOU\ WILL\ HAVE\ THE\ CHOICE\ TO\ EITHER\ OVERRIDE\ OR\ CREATE\ DUPLICATES\ OF\ ANY\ PRESENT\ FILES.DO\ YOU\ WANT\ TO\ CONTINUE?=Le r\u00e9pertoire d\'exportation s\u00e9lectionn\u00e9 n\'est pas vide. Lors de l\'exportation, vous aurez l\'\nchoice soit de remplacer ou de cr\u00e9er des doubles de tous les fichiers pr\u00e9sents. \nVoulez-vous continuer?
-THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=Le r\u00e9pertoire d\'export \n \\"{0} \\" \ndoes n\'existent pas. \nVeuillez s\u00e9lectionner ou cr\u00e9er un r\u00e9pertoire.
-\ DESTINATION\ DIRECTORY=\ R\u00e9pertoire de destination
-SAVE\ CHANGES=Sauvegarder les changements
-THERE\ ARE\ UNSAVED\ CHANGES.SAVE\ NOW?=Il ya des modifications non enregistr\u00e9es. \nEnregistrer maintenant?
-ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Erreur lors de montrer licence. Consultez le journal des erreurs pour plus de d\u00e9tails.
-LICENSE=License
-ABOUT\ {0}=A propos de {0}
-CLOSE=Fermer
-DISPLAY\ LICENSE=Affichage de licence
+REMEMBER\ MY\ CHOICE=Recordar mi elecci\u00f3n 
+\ FORMATTED=\ con formato
+VIEW\ IMDI\ XML=Ver IMDI en XML
+THE\ NODE\ MUST\ BE\ SAVED\ FIRST.SAVE\ NOW?=El nodo necesita ser guardado antes de seguir.\n\u00bfGuardar ahora
+FAILED\ TO\ OPEN\ THE\ REMOTE\ LOCATION\:\ {0}=No se pudo abrir la ubicaci\u00f3n remota: {0}
+OPEN\ IN\ EXTERNAL\ APPLICATION=Abrir en aplicaci\u00f3n externa
+FAILED\ TO\ OPEN\ THE\ FILE.\ PLEASE\ CHECK\ THAT\ IT\ IS\ ACCESSIBLE\ AND\ HAS\ AN\ APPLICATION\ ASSOCIATED\ WITH\ IT.DO\ YOU\ WANT\ TO\ OPEN\ THE\ PARENT\ DIRECTORY?=No se pudo abrir el archivo. Comprobar que \u00e9ste sea asequible y que est\u00e9 asociado a una aplicaci\u00f3n.\n\n\u00bfAbrir el directorio primario?
+FAILED\ TO\ FIND\ THE\ FILE\:\ {0}=No se pudo encontrar el archivo: {0}
+SELECTION=Selecci\u00f3n
+DIRECTORIES=Directorios
+METADATA\ FILES=Archivos de metadatos
+THE\ SELECTED\ EXPORT\ DIRECTORY\ IS\ NOT\ EMPTY.\ ON\ EXPORT,\ YOU\ WILL\ HAVE\ THE\ CHOICE\ TO\ EITHER\ OVERRIDE\ OR\ CREATE\ DUPLICATES\ OF\ ANY\ PRESENT\ FILES.DO\ YOU\ WANT\ TO\ CONTINUE?=El directorio de exportaci\u00f3n seleccionado no est\u00e1 vac\u00edo. Al exportar, habr\u00e1 que elegir entre reemplazar o crear duplicados de los posibles archivos presentes.\n\u00bfContinuar?
+THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=El directorio de exportaci\u00f3n\n"{0}"\nno existe.\nSeleccionar o crear un directorio.
+\ DESTINATION\ DIRECTORY=Directorio de destino
+SAVE\ CHANGES=Guardar los cambios
+THERE\ ARE\ UNSAVED\ CHANGES.SAVE\ NOW?=Hay cambios sin guardar.\n\u00bfGuardar ahora?
+ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error en la visualizaci\u00f3n de la licencia. Ver registro de errores para m\u00e1s detalles.
+LICENSE=Licencia
+ABOUT\ {0}=Sobre {0}
+CLOSE=Cerrar
+DISPLAY\ LICENSE=Ver licencia
 ABOUTBOXTEXT=Constructeur d\'archives \nA outil local pour organiser les donn\u00e9es linguistiques. \nMax Planck de psycholinguistique \n\nApplication initialement con\u00e7u et d\u00e9velopp\u00e9 par {0} \n\'entretien nCurrent et les extensions par {1} \nArbil utilise \u00e9galement composants de l\'API IMDI \u200b\u200bet Lamus type Checker \n \nVersion: {2} {3} {4} \ \ {5} n \ \ Date nCompile:.. {6} \n \ \ version nJava: { 7} \ nVendor \: {8} \nJVM: {9} {10} \ system nOperating \: {11} {12} ({13}) \n \nCopyright (C) {14} Institut Max Planck de psycholinguistique \n \nArbil a \u00e9t\u00e9 autoris\u00e9 en vertu de la GNU General Public License 2. \nCliquez sur le bouton ci-dessous pour voir la version compl\u00e8te de cette licence.
 SAVE\ TO\ DISK?=Enregistrer sur le disque?
+FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=No se pudo cargar {0} ubicaciones. Ver registro de errores para m\u00e1s detalles.
+THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?=Todos los cambios pendientes a {0} se guardar\u00e1n en el disco. \u00bfContinuar?
