--- a/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
@@ -150,7 +150,7 @@ PLUGINLIST\ NOT\ FOUND=PluginList not found
 
 PLUGIN\ ERROR=Plugin Error
 
-COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=Could not load plugin: {0}\n
+COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=Could not load plugin: {0}
 
 EDIT\ COLUMN\ VIEWS=Edit Column Views
 
