--- a/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
@@ -1,9 +1,9 @@
 
-INSERT\ MANUAL\ RESOURCE\ LOCATION=Inserisci posizione risorsa manuale
+INSERT\ MANUAL\ RESOURCE\ LOCATION=Inserisci postazione risorsa manuale
 
-RE-IMPORT\ THIS\ BRANCH=Importa di nuovo questo ramo
+RE-IMPORT\ THIS\ BRANCH=Reimporta  questo ramo
 
-RE-IMPORT\ THIS\ SESSION=Importa di nuovo questa sessione
+RE-IMPORT\ THIS\ SESSION=Reimporta questa sessione
 
 IMPORT\ BRANCH=Importa ramo
 
@@ -73,7 +73,7 @@ REMOVE\ SELECTED\ ROWS=Rimuovi righe selezionate dalla tabella
 
 VIEW\ SELECTED\ ROWS=Visualizza righe selezionate
 
-CLEAR\ CELL\ HIGHLIGHT=Cancella celle evidenziate
+CLEAR\ CELL\ HIGHLIGHT=Rimuovi evidenziatura dalle celle
 
 HIGHLIGHT\ MATCHING\ CELLS=Evidenzia celle corrispondenti
 
@@ -85,7 +85,7 @@ REVERT\ SELECTED\ FIELDS=Ripristina campi selezionati
 
 DELETE\ FIELD=Elimina campo
 
-DELETE\ MULTIFIELD=Elimina campi
+DELETE\ MULTIFIELD=Elimina multicampo
 
 SHOW\ CHILD\ NODES=Mostra nodi figli
 
@@ -141,17 +141,17 @@ SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostra lingua nel nome della colonna
 
 TRACK\ TABLE\ SELECTION\ IN\ TREE=Segui selezione tabella su albero
 
-THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Questa opzione controlla che tutti i file di metadati locali siano compatibili con il formato XML ogni volta che vengono caricati. Se il file di metadati non viene convalidato secondo lo schema, sar\u00e0 evidenziato di rosso sull'albero.
+THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Questa opzione verifica che tutti i file locali di metadati siano compatibili con il formato XML ogni volta che vengono caricati. Se il file di metadati non viene convalidato secondo lo schema, sar\u00e0 evidenziato di rosso sull'albero.
 
-ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Controlla sempre compatibilit\u00e0 dei file di metadati locali con il formato XML 
+ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Controlla sempre conformit\u00e0 dei file locali di metadati con il formato XML 
 
-THE\ SETTING\ CHANGE\ WILL\ BE\ EFFECTIVE\ WHEN\ ARBIL\ IS\ RESTARTED.=Le modifiche alle impostazioni verranno eseguite dopo il riavvio di Arbil
+THE\ SETTING\ CHANGE\ WILL\ BE\ EFFECTIVE\ WHEN\ ARBIL\ IS\ RESTARTED.=Le modifiche alle impostazioni verranno rese effettive dopo il riavvio di Arbil
 
 THIS\ OPTION\ CHECKS\ THE\ SERVER\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES\ AND\ SHOWS\ ICONS\ ACCORDINGLY.=Questa opzione verifica le autorizzazioni del server per le risorse remote e mostra le icone corrispondenti.
 
 CHECK\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES=Verifica autorizzazioni per risorse remote
 
-WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ FILE\ INTO\ THE\ LOCAL\ CACHE\ RATHER\ THAN\ LINKING\ TO\ ITS\ CURRENT\ LOCATION.\ THIS\ OPTION\ CAN\ MAKE\ A\ CONSIDERABLE\ DIFFERENCE\ TO\ DISK\ USE\ IF\ YOU\ ARE\ HANDLING\ LARGE\ FILES.=Quando si aggiunge una risorsa a una sessione il file viene copiato nella cache locale e non viene creato nessun collegamento alla sua postazione corrente. Questa opzione pu\u00f2 nettamente migliorare l'uso del disco se si usano file di grande formato.
+WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ FILE\ INTO\ THE\ LOCAL\ CACHE\ RATHER\ THAN\ LINKING\ TO\ ITS\ CURRENT\ LOCATION.\ THIS\ OPTION\ CAN\ MAKE\ A\ CONSIDERABLE\ DIFFERENCE\ TO\ DISK\ USE\ IF\ YOU\ ARE\ HANDLING\ LARGE\ FILES.=Quando si aggiunge una nuova risorsa a una sessione il file viene copiato nella cache locale e non viene creato nessun collegamento alla sua postazione corrente. Questa opzione pu\u00f2 nettamente migliorare l'uso del disco se si usano file di grande formato.
 
 COPY\ NEW\ RESOURCES\ INTO\ CACHE=Copia nuove risorse nella cache 
 
@@ -211,11 +211,11 @@ SAVE\ CHANGES=Salva modifiche
 
 FILE=File
 
-PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore del parser durante la lettura del sistema di Guida! Vedi log degli errori per ulteriori dettagli.
+PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore del parser durante la lettura del sistema di Guida! Visualizza log degli errori per maggiori dettagli.
 
 ERROR=Errore
 
-I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore I/O durante la lettura del sistema di Guida! Vedi registro errori per ulteriori dettagli.
+I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore I/O durante la lettura del sistema di Guida! Visualizza log degli errori per maggiori dettagli.
 
 ARBILMENUBAR\ REQUIRES\ ARBILWINDOWMANAGER.\ FOUND\ {0}=ArbilMenuBar richiede ArbilWindowManager. Trovato {0}
 
@@ -223,7 +223,7 @@ ARBILMENUBAR\ REQUIRES\ ARBILTREEHELPER.\ FOUND\ {0}=ArbilMenuBar richiede Arbil
 
 EXPORT\ FAILED=Esportazione non riuscita
 
-EXPORT\ TO\ HTML\ FAILED.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Esportazione in HTML non riuscita. Vedi log degli errori per ulteriori dettagli. 
+EXPORT\ TO\ HTML\ FAILED.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Esportazione in HTML non riuscita. Visualizza log degli errori per maggiori dettagli. 
 
 EXPORT\ IMDI\ TO\ HTML=Esporta IMDI in HTML
 
@@ -231,7 +231,7 @@ OPEN\ IMDI\ FORMATTED=Apri IMDI formattato
 
 VIEW\ IMDI\ FORMATTED=Visualizza IMDI formattato
 
-VIEW\ XML=Visualizza in XML
+VIEW\ XML=Visualizza XML
 
 OPEN\ IN\ EXTERNAL\ APPLICATION=Apri in applicazione esterna
 
@@ -244,9 +244,9 @@ SELECT\ RESOURCE\ FILE=Seleziona file di risorse
 BROWSE\ FOR\ RESOURCE\ FILE=Sfoglia file di risorse
 ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)=L''applicazione sostituir\u00e0 tutti i valori della colonna "{0}"\ncon il valore "{1}"\n(i <valori multipli> non subiranno modifiche)
 LOGOUT\ ERROR=Errore durante il logout
-IMPORT/EXPORT\ FAVOURITES=Importa/Esporta preferiti
+IMPORT/EXPORT\ FAVOURITES=Importa/esporta preferiti
 GROUP\ FAVOURITES\ BY\ TYPE=Raggruppa preferiti secondo tipologia
-EDIT\ THIS\ COLUMN\ VIEW=Modifica visualizzazione di questa colonna
+EDIT\ THIS\ COLUMN\ VIEW=Modifica questa visualizzazione a colonne
 LIMIT\ VIEW\ TO\ CURRENT\ COLUMNS=Limita visualizzazione a colonne correnti 
 COLUMN\ VIEW\ FOR\ THIS\ TABLE=Visualizzazione a colonne per questa tabella
 COPY\ TABLE\ FOR\ WEBSITE=Copia tabella per sito web
@@ -260,14 +260,14 @@ COULD\ NOT\ REVERT\ VERSION,\ NO\ CHANGES\ MADE=Impossibile ripristinare la vers
 FORCE\ TYPE\ CHECKING=Forza type checking
 MAKE\ COLUMN\ FIT\ CONTENTS=Adatta colonna al contenuto
 MAKE\ ALL\ COLUMNS\ FIT\ CONTENTS=Adatta tutte le colonne al contenuto
-MAKE\ ALL\ COLUMNS\ THE\ SIZE\ OF=Adatta tutte le colonne alla misura "{0}"
+MAKE\ ALL\ COLUMNS\ THE\ SIZE\ OF=Adatta tutte le colonne alla misura di "{0}"
 NO\ UPDATES\ FOUND,\ CURRENT\ VERSION\ IS\ {0}=Nessun aggiornamento trovato, la versione attuale \u00e8 {0}
-DELETE\ ATTRIBUTE\ {0}\ X\ {1}=Elimina {1} attributo "{0}" 
-DELETE\ {0}\ X\ {1}=Elimina {1} campo "{0}"
+DELETE\ ATTRIBUTE\ {0}\ X\ {1}=Elimina {1} attributo/i "{0}" 
+DELETE\ {0}\ X\ {1}=Elimina {1} campo/i "{0}"
 REMOVE\ SELECTED\ NODES\ FROM\ PARENT=Elimina i nodi selezionati dal nodo padre
-JUMP\ TO\ IN\ TREE=Passa a nell'albero
+JUMP\ TO\ IN\ TREE=Visualizza sull'albero
 SHOW\ CONTEXT=Mostra contesto
 SELECT\ MATCHING\ ROWS=Seleziona righe corrispondenti
-ERROR\ DELETING\ FIELDS,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante l'eliminazione dei campi, controlla il log degli errori nel menu Guida per ulteriori informazioni.
+ERROR\ DELETING\ FIELDS,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante l'eliminazione dei campi, visualizza log degli errori nel menu Guida per maggiori informazioni.
 SHOW\ LOG\ CONSOLE=Mostra console del log
 LOG\ CONSOLE\ NOT\ AVAILABLE\ WEB\ START=La console del log non \u00e8 disponibile quando si utilizza la versione web start
